--- a/index.html
+++ b/index.html
@@ -46,17 +46,15 @@
         }
 
         const event = JSON.parse(params.get('event'));
+
         const request = gapi.client.calendar.events.insert({
           'calendarId': 'primary',
           'resource': event
         });
 
         request.execute(event => {
-          appendPre('Event created: ' + event.htmlLink);
+          window.location.replace(event.htmlLink);
         });
-
-        // console.log(event);
-        // window.close();
       }
 
     </script>
